# Nirma-Univeristy-Language-Model-18042026

./: README.md  main.py  pyproject.toml  requirements.txt
nirma_university_language_models/: __init__.py  character_models.py  music_models.py  sentiment_models.py
src/character_level_model/: 01_character_dataset_exploration.ipynb  02_character_rnn_gru_lstm_comparison.ipynb  03_character_sequence_models_lecture_notebook.ipynb
src/music_generation/: 01_music_dataset_exploration.ipynb  02_music_rnn_gru_lstm_comparison.ipynb  03_music_sequence_models_lecture_notebook.ipynb  simple_melodies.txt
src/sentiment_analysis/: 01_sentiment_dataset_exploration.ipynb  02_sentiment_rnn_gru_lstm_comparison.ipynb  03_sentiment_sequence_models_lecture_notebook.ipynb  sentiment_reviews.csv
