[project]
name = "nirma-university-language-models"
version = "0.1.0"
description = "Lecture notebooks and reusable helpers for character, music, and sentiment sequence models."
readme = "README.md"
requires-python = ">=3.12.11"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "torch>=2.11.0",
]
